tests/fixtures/invalid/pow_none_set_str.py
# Cannot call pow() with None, Set[int], Str
x = pow(None, {1, 2, 3}, "hello")
